# language_models

./: .gitignore  README.md  compose.yml  init_volumes.sh  pyproject.toml  requirements.txt
airflow/: Dockerfile  requirements-airflow.txt
airflow/dags/: arxiv_historical_paper_ingestion.py
airflow/dags/arxiv_ingestion/: common.py  fetching.py  indexing.py  reporting.py
notebooks/: synthesize_annotated_finance.ipynb  synthesize_ner_data.ipynb  synthesizing_annotated_data.ipynb  synthetic_data_creation.ipynb
notebooks/week1/: week1_setup.ipynb
notebooks/week2/: week2_arxiv_integration.ipynb
notebooks/week3/: week3_opensearch.ipynb
notebooks/week4/: week4_hybrid_search.ipynb
notebooks/week5/: week5_complete_rag_system.ipynb
src/: main.py
src/model/: dataset_configs.py  training.py  transformer_models.py
src/services/arxiv/: client.py
src_ner/: utils.py
