[tool.poetry]
name = "language-models-venv"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
datasets = "3.6.0"
huggingface-hub = "^0.34.4"
requests = "^2.32.4"
scikit-learn = "^1.7.1"
pandas = "^2.3.1"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
